--- a/index.html
+++ b/index.html
@@ -1,52 +1,47 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
-<html lang="en-us">
-
-<head>
-    <title> About Me</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-
-<body>
-    <div id="top"></div>
-    <div class="clearfix">
-        <section class="content">
-            <header>
-                <h1 id="name">Ron Johnson</h1>
-                <nav>
-                    <br><br>
-                    <a href="index.html">About Me | </a>
-                    <a href="portfolio.html">Portfolio | </a>
-                    <a href="#">Contact</a>
-                </nav>
-            </header>
-            ​<br><br><br><br><br><br>
-            <img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
-            ​
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis neque quis velit euismod
-                malesuada. Mauris vitae dolor nec est dictum tincidunt in ut lectus. Duis in mi sit amet ipsum varius
-                suscipit non lacinia nibh. Quisque vestibulum augue enim, ac blandit mauris semper a. Donec mollis, diam
-                sit amet commodo convallis, quam mauris condimentum dui, a condimentum eros felis vitae massa. Proin
-                ullamcorper in libero in rhoncus. Cras in odio nec mauris feugiat sodales sed eu diam. Proin volutpat
-                quis sapien in maximus. Vivamus sodales, ex vel vulputate mollis, nisl nisl aliquam erat, at ultricies
-                ex ligula ut orci. Cras id ex facilisis, lacinia quam a, faucibus nisl. Etiam efficitur, magna a mollis
-                viverra, velit nunc ullamcorper neque, in dignissim eros metus quis nisl. Duis dapibus, magna a eleifend
-                tempus, lacus eros bibendum arcu, nec fermentum elit mi pretium est. Aenean pharetra sapien ut lorem
-                tempus vestibulum. Etiam suscipit ipsum sem, quis fringilla lectus tincidunt vitae. Cras molestie lorem
-                sem, non elementum nulla aliquet quis. Phasellus hendrerit lobortis sem id iaculis.</p>
-
-            <p>Fusce rutrum suscipit enim, eu consequat tortor eleifend ac. Mauris sed rutrum orci, rhoncus vulputate
-                ante. Nam aliquet eros fringilla dui cursus, quis malesuada enim auctor. Proin vitae sagittis mauris.
-                Aliquam in justo elit. Cras ornare tellus sem, non tempus velit rutrum in. Nullam nec tortor tincidunt,
-                convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
-                lorem sed sodales. Proin justo dui, sagittis ac enim eu, rutrum feugiat erat. Nullam ut justo id dui
-                eleifend scelerisque at pulvinar arcu. Vestibulum dolor orci, porta sit amet pulvinar a, luctus non
-                nulla. Mauris maximus odio vel purus fringilla facilisis. Aliquam blandit odio et rhoncus luctus.</p>
-        </section>
-    </div>
-    <footer>Footer Here</footer>
-</body>
-
+<html lang='en-us'>
+    <head>
+        <title>3 Column Format</title>
+	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </head>
+    <body>
+        <aside id="sidebarA">
+            <section id="upperA"></section>
+        </aside>
+        <aside id="sidebarB">
+            <section id="upperB"></section>
+        </aside>
+        <header><p id="leftPara">Ron Johnson</p>
+            <nav>
+                <a href="#">About Me | </a>
+                <a href="portfolio.html">Portfolio | </a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <div id="spacer"></div>
+        <section id="main">
+        <main><h2 id="left">About Me</h2>
+            <br><br><br><br><hr>
+            <section>
+                <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
+                ​
+                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis neque quis velit euismod
+                    malesuada. Mauris vitae dolor nec est dictum tincidunt in ut lectus. Duis in mi sit amet ipsum varius
+                    suscipit non lacinia nibh. Quisque vestibulum augue enim, ac blandit mauris semper a. Donec mollis, diam
+                    sit amet commodo convallis, quam mauris condimentum dui, a condimentum eros felis vitae massa. Proin
+                    ullamcorper in libero in rhoncus. Cras in odio nec mauris feugiat sodales sed eu diam.</p>
+    
+                <p>Fusce rutrum suscipit enim, eu consequat tortor eleifend ac. Mauris sed rutrum orci, rhoncus vulputate
+                    ante. Nam aliquet eros fringilla dui cursus, quis malesuada enim auctor. Proin vitae sagittis mauris.
+                    Aliquam in justo elit. Cras ornare tellus sem, non tempus velit rutrum in. Nullam nec tortor tincidunt,
+                    convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
+                    lorem sed sodales.</p>
+            </section>
+        </main>
+    </section>
+        <div id="bottomSpacer"></div>
+        <div><footer id="footer"><h2>Footer</h2></footer></div>
+        <!-- <div id="bottomSpacer"></div> -->
+    </body>
 </html>
