--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,47 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
-<html lang="en-us">
-
-<head>
-    <title>Portfolio</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-
-<body>
-    <div id="top"></div>
-    <section class="content">
-        <header>
-            <h1 id="name">Ron Johnson</h1>
+<html lang='en-us'>
+    <head>
+        <title>3 Column Format</title>
+	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </head>
+    <body>
+        <aside id="sidebarA">
+            <section id="upperA"></section>
+        </aside>
+        <aside id="sidebarB">
+            <section id="upperB"></section>
+        </aside>
+        <header><p id="leftPara">Ron Johnson</p>
             <nav>
-                <br><br>
                 <a href="index.html">About Me | </a>
                 <a href="#">Portfolio | </a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
+        <div id="spacer"></div>
+        <section id="main">
+        <main><h2 id="left">Portfolio</h2>
+            <br><br><br><br><hr>
+            <section>
+                <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
+                ​
+                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis neque quis velit euismod
+                    malesuada. Mauris vitae dolor nec est dictum tincidunt in ut lectus. Duis in mi sit amet ipsum varius
+                    suscipit non lacinia nibh. Quisque vestibulum augue enim, ac blandit mauris semper a. Donec mollis, diam
+                    sit amet commodo convallis, quam mauris condimentum dui, a condimentum eros felis vitae massa. Proin
+                    ullamcorper in libero in rhoncus. Cras in odio nec mauris feugiat sodales sed eu diam.</p>
+    
+                <p>Fusce rutrum suscipit enim, eu consequat tortor eleifend ac. Mauris sed rutrum orci, rhoncus vulputate
+                    ante. Nam aliquet eros fringilla dui cursus, quis malesuada enim auctor. Proin vitae sagittis mauris.
+                    Aliquam in justo elit. Cras ornare tellus sem, non tempus velit rutrum in. Nullam nec tortor tincidunt,
+                    convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
+                    lorem sed sodales.</p>
+            </section>
+        </main>
     </section>
-</body>
-
+        <div id="bottomSpacer"></div>
+        <div><footer id="footer"><h2>Footer</h2></footer></div>
+        <!-- <div id="bottomSpacer"></div> -->
+    </body>
 </html>
