--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang='en-us'>
     <head>
-        <title>3 Column Format</title>
+        <title>3 Column Format L</title>
 	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
@@ -20,9 +20,9 @@
             </nav>
         </header>
         <div id="spacer"></div>
-        <section id="main">
-        <main><h2 id="left">About Me</h2>
-            <br><br><br><br><hr>
+        <section class="main left">
+        <section><p>About Me</p>
+            <hr>
             <section>
                 <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
                 ​
@@ -38,7 +38,7 @@
                     convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
                     lorem sed sodales.</p>
             </section>
-        </main>
+        </section>
     </section>
         <div id="bottomSpacer"></div>
         <div><footer id="footer"><h2>Footer</h2></footer></div>
