--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang='en-us'>
     <head>
-        <title>3 Column Format L</title>
+        <title>HomeworkOne About Me</title>
 	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
@@ -19,7 +19,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <div id="spacer"></div>
+        <div id="spacerA"></div>
         <section class="main left">
         <section><p>About Me</p>
             <hr>
