--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 
 <html lang='en-us'>
     <head>
-        <title>3 Column Format</title>
+        <title>HomeworkOne Portfolio</title>
 	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
@@ -19,24 +19,37 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <div id="spacer"></div>
+        <div id="spacerP"></div>
         <section class="main left">
         <section><p>Portfolio</p>
             <hr>
             <section>
-                <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
-                ​
-                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis neque quis velit euismod
-                    malesuada. Mauris vitae dolor nec est dictum tincidunt in ut lectus. Duis in mi sit amet ipsum varius
-                    suscipit non lacinia nibh. Quisque vestibulum augue enim, ac blandit mauris semper a. Donec mollis, diam
-                    sit amet commodo convallis, quam mauris condimentum dui, a condimentum eros felis vitae massa. Proin
-                    ullamcorper in libero in rhoncus. Cras in odio nec mauris feugiat sodales sed eu diam.</p>
-    
-                <p>Fusce rutrum suscipit enim, eu consequat tortor eleifend ac. Mauris sed rutrum orci, rhoncus vulputate
-                    ante. Nam aliquet eros fringilla dui cursus, quis malesuada enim auctor. Proin vitae sagittis mauris.
-                    Aliquam in justo elit. Cras ornare tellus sem, non tempus velit rutrum in. Nullam nec tortor tincidunt,
-                    convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
-                    lorem sed sodales.</p>
+                <div class="row">
+                    <div class="column">
+                      <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                      <!-- <div id="overlay1">Where is it?</div> -->
+                    </div>
+                    <div class="column">
+                      <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
+                      <!-- <div id="overlay2">Where is it?</div> -->
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="column">
+                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                          <!-- <div id="overlay1">Where is it?</div> -->
+                        </div>
+                        <div class="column">
+                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
+                          <!-- <div id="overlay2">Where is it?</div> -->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                          <!-- <div id="overlay1">Where is it?</div> -->
+                        </div>
+                    </div>
             </section>
         </section>
     </section>
