--- a/portfolio.html
+++ b/portfolio.html
@@ -27,27 +27,27 @@
                 <div class="row">
                     <div class="column">
                       <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
-                      <!-- <div id="overlay1">Where is it?</div> -->
+                      <div id="overlay1">Where is it?</div>
                     </div>
                     <div class="column">
                       <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
-                      <!-- <div id="overlay2">Where is it?</div> -->
+                      <div id="overlay2">Where is it?</div>
                     </div>
                 </div>
                 <div class="row">
                         <div class="column">
                           <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
-                          <!-- <div id="overlay1">Where is it?</div> -->
+                          <div id="overlay3">Where is it?</div>
                         </div>
                         <div class="column">
                           <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
-                          <!-- <div id="overlay2">Where is it?</div> -->
+                          <div id="overlay4">Where is it?</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
                           <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
-                          <!-- <div id="overlay1">Where is it?</div> -->
+                          <div id="overlay5">Where is it?</div>
                         </div>
                     </div>
             </section>
