initial css modifications for final specs

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     </head>
     <body>
         <aside id="sidebarA">
-            <section id="upperA"></section>
+            <!-- <section id="upperA"></section> -->
         </aside>
         <aside id="sidebarB">
-            <section id="upperB"></section>
+            <!-- <section id="upperB"></section> -->
         </aside>
         <header><p id="leftPara">Ron Johnson</p>
             <nav>
-                <a href="#">About Me | </a>
-                <a href="portfolio.html">Portfolio | </a>
+                <a href="#">About Me |  </a>
+                <a href="portfolio.html">Portfolio  |  </a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
         <div id="spacerA"></div>
         <section class="main left">
-        <section><p>About Me</p>
+        <section><p class="label">About Me</p>
             <hr>
             <section>
                 <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
@@ -40,8 +40,8 @@
             </section>
         </section>
     </section>
-        <div id="bottomSpacer"></div>
-        <div><footer id="footer"><h2>Footer</h2></footer></div>
+        <!-- <div id="bottomSpacer"></div> -->
+        <div><footer id="footer">Copyright &#169</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
