--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         </header>
         <div id="spacerP"></div>
         <section class="main left">
-        <section><p>Portfolio</p>
+        <section><p class="label">Portfolio</p>
             <hr>
             <section>
                 <div class="row">
@@ -53,8 +53,8 @@
             </section>
         </section>
     </section>
-        <div id="bottomSpacer"></div>
-        <div><footer id="footer"><h2>Footer</h2></footer></div>
+        <!-- <div id="bottomSpacer"></div> -->
+        <div><footer id="footer">Copyright &#169</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
