--- a/contact.html
+++ b/contact.html
@@ -21,24 +21,24 @@
         </header>
         <div id="spacerC"></div>
         <section class="main left">
-        <section><p>Contact</p>
+        <section><p class="label">Contact</p>
             <hr>
             <section>
                 Name:<br>
                 <input type="text" name="name" value="John Smith" size="89">
-                <br>
+                <br><br>
                 Email:<br>
                 <input type="text" name="email" value="example@gmail.com" size="89">
-                <br>
+                <br><br>
                 Message:<br>
                 <textarea name="message" cols="90" rows="10"></textarea>
                 <br>
-                <input type="submit" value="Submit">
+                <input id="submit-con" type="submit" value="Submit">
             </section>
         </section>
         </section>
-        <div id="bottomSpacer"></div>
-        <div><footer id="footer"><h2>Footer</h2></footer></div>
+        <!-- <div id="bottomSpacer"></div> -->
+        <div><footer id="footer">Copyright &#169</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
