css close to complete

--- a/contact.html
+++ b/contact.html
@@ -25,20 +25,20 @@
             <hr>
             <section>
                 Name:<br>
-                <input type="text" name="name" value="John Smith" size="89">
+                <input type="text" name="name" value="John Smith" size="69">
                 <br><br>
                 Email:<br>
-                <input type="text" name="email" value="example@gmail.com" size="89">
+                <input type="text" name="email" value="example@gmail.com" size="69">
                 <br><br>
                 Message:<br>
-                <textarea name="message" cols="90" rows="10"></textarea>
+                <textarea name="message" cols="70" rows="10"></textarea>
                 <br>
                 <input id="submit-con" type="submit" value="Submit">
             </section>
         </section>
         </section>
         <!-- <div id="bottomSpacer"></div> -->
-        <div><footer id="footer">Copyright &#169</footer></div>
+        <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
