--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <aside id="sidebarA">
-            <!-- <section id="upperA"></section> -->
+            <section id="upperA"></section>
         </aside>
         <aside id="sidebarB">
-            <!-- <section id="upperB"></section> -->
+            <section id="upperB"></section>
         </aside>
         <header><p id="leftPara">Ron Johnson</p>
             <nav>
@@ -41,7 +41,7 @@
         </section>
     </section>
         <!-- <div id="bottomSpacer"></div> -->
-        <div><footer id="footer">Copyright &#169</footer></div>
+        <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
