--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
         </section>
     </section>
         <!-- <div id="bottomSpacer"></div> -->
-        <div><footer id="footer">Copyright &#169</footer></div>
+        <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
         <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
