add bio text and formatting

--- a/index.html
+++ b/index.html
@@ -24,19 +24,11 @@
         <section><p class="label">About Me</p>
             <hr>
             <section>
-                <p><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
+                <p class="lineSpacing"><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
                 ​
-                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis neque quis velit euismod
-                    malesuada. Mauris vitae dolor nec est dictum tincidunt in ut lectus. Duis in mi sit amet ipsum varius
-                    suscipit non lacinia nibh. Quisque vestibulum augue enim, ac blandit mauris semper a. Donec mollis, diam
-                    sit amet commodo convallis, quam mauris condimentum dui, a condimentum eros felis vitae massa. Proin
-                    ullamcorper in libero in rhoncus. Cras in odio nec mauris feugiat sodales sed eu diam.</p>
+                Currently enrolled in Full Stack Web Development Boot Camp with intent to move into this field. Programming skills using HTML, CSS, BootStrap, JavaScript, Java, Python, React.js, Node.js, MySQL, and Angular. Performed over 200 commits to Github. Created 6 projects, the latest of which can be be found on my website.</p>
     
-                <p>Fusce rutrum suscipit enim, eu consequat tortor eleifend ac. Mauris sed rutrum orci, rhoncus vulputate
-                    ante. Nam aliquet eros fringilla dui cursus, quis malesuada enim auctor. Proin vitae sagittis mauris.
-                    Aliquam in justo elit. Cras ornare tellus sem, non tempus velit rutrum in. Nullam nec tortor tincidunt,
-                    convallis neque id, sollicitudin neque. Ut consectetur ante eget auctor varius. Nam pulvinar lacinia
-                    lorem sed sodales.</p>
+                <p class="lineSpacing">Extensive experience in electronics industry as QC specialist and troubleshooter for circuit boards and software for industrial applications. Broad experience in medical laboratory testing using automated and manual methods including programming test equipment, and bioinformatics data transfer. Wide math/science tutoring experience working with high school and college students to ensure student success.</p>
             </section>
         </section>
     </section>
