--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
             <hr>
             <section>
                 Name:<br>
-                <input type="text" name="name" value="John Smith" size="69">
+                <input class="lineCor" type="text" name="name" value="John Smith" size="125">
                 <br><br>
                 Email:<br>
-                <input type="text" name="email" value="example@gmail.com" size="69">
+                <input class="lineCor" type="text" name="email" value="example@gmail.com" size="125">
                 <br><br>
                 Message:<br>
-                <textarea name="message" cols="70" rows="10"></textarea>
+                <textarea name="message" cols="126" rows="10"></textarea>
                 <br>
                 <input id="submit-con" type="submit" value="Submit">
             </section>
