--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section><p class="label">About Me</p>
             <hr>
             <section>
-                <p class="lineSpacing"><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
+                <p class="lineCor"><img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
                 ​
                 Currently enrolled in Full Stack Web Development Boot Camp with intent to move into this field. Programming skills using HTML, CSS, BootStrap, JavaScript, Java, Python, React.js, Node.js, MySQL, and Angular. Performed over 200 commits to Github. Created 6 projects, the latest of which can be be found on my website.</p>
     
-                <p class="lineSpacing">Extensive experience in electronics industry as QC specialist and troubleshooter for circuit boards and software for industrial applications. Broad experience in medical laboratory testing using automated and manual methods including programming test equipment, and bioinformatics data transfer. Wide math/science tutoring experience working with high school and college students to ensure student success.</p>
+                <p class="lineCor">Extensive experience in electronics industry as QC specialist and troubleshooter for circuit boards and software for industrial applications. Broad experience in medical laboratory testing using automated and manual methods including programming test equipment, and bioinformatics data transfer. Wide math/science tutoring experience working with high school and college students to ensure student success.</p>
             </section>
         </section>
     </section>
