--- a/portfolio.html
+++ b/portfolio.html
@@ -26,35 +26,37 @@
             <section>
                 <div class="row">
                     <div class="column">
-                      <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                      <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:125%">
                       <div id="overlay1">Where is it?</div>
                     </div>
+                    <div class="column-smsp">
+                    </div>
                     <div class="column">
-                      <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
+                      <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:125%">
                       <div id="overlay2">Where is it?</div>
                     </div>
                 </div>
                 <div class="row">
                         <div class="column">
-                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                          <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:125%">
                           <div id="overlay3">Where is it?</div>
                         </div>
+                        <div class="column-smsp">
+                        </div>
                         <div class="column">
-                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Forest" style="width:100%">
+                          <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:125%">
                           <div id="overlay4">Where is it?</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                          <img class="port-image" src="assets/images/RonJohnson.jpg" alt="Snow" style="width:100%">
+                          <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:125%">
                           <div id="overlay5">Where is it?</div>
                         </div>
                     </div>
             </section>
         </section>
     </section>
-        <!-- <div id="bottomSpacer"></div> -->
         <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
-        <!-- <div id="bottomSpacer"></div> -->
     </body>
 </html>
