added project names to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,31 +27,31 @@
                 <div class="row">
                     <div class="column">
                       <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:125%">
-                      <div id="overlay1">Where is it?</div>
+                      <div id="overlay1">Ajax Live Search</div>
                     </div>
                     <div class="column-smsp">
                     </div>
                     <div class="column">
                       <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:125%">
-                      <div id="overlay2">Where is it?</div>
+                      <div id="overlay2">jQuery Animation</div>
                     </div>
                 </div>
                 <div class="row">
                         <div class="column">
                           <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:125%">
-                          <div id="overlay3">Where is it?</div>
+                          <div id="overlay3">Numerical Integrations</div>
                         </div>
                         <div class="column-smsp">
                         </div>
                         <div class="column">
                           <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:125%">
-                          <div id="overlay4">Where is it?</div>
+                          <div id="overlay4">Hiding Objects</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
                           <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:125%">
-                          <div id="overlay5">Where is it?</div>
+                          <div id="overlay5">Node.js JSON Server</div>
                         </div>
                     </div>
             </section>
