added comments and cleaned code

--- a/contact.html
+++ b/contact.html
@@ -6,39 +6,41 @@
 	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+        <!-- put asides in first so header and content will fit between -->
         <aside id="sidebarA">
             <section id="upperA"></section>
         </aside>
         <aside id="sidebarB">
             <section id="upperB"></section>
         </aside>
-        <header><p id="leftPara">Ron Johnson</p>
+        <header>
+            <p id="leftPara">Ron Johnson</p>
             <nav>
                 <a href="index.html">About Me | </a>
                 <a href="portfolio.html">Portfolio | </a>
                 <a href="#">Contact</a>
             </nav>
         </header>
+        <!-- set spacer specific for page -->
         <div id="spacerC"></div>
+        <!-- main content  -->
         <section class="main left">
-        <section><p class="label">Contact</p>
-            <hr>
-            <section>
-                Name:<br>
-                <input class="lineCor" type="text" name="name" value="John Smith" size="125">
-                <br><br>
-                Email:<br>
-                <input class="lineCor" type="text" name="email" value="example@gmail.com" size="125">
-                <br><br>
-                Message:<br>
-                <textarea name="message" cols="126" rows="10"></textarea>
-                <br>
-                <input id="submit-con" type="submit" value="Submit">
+            <section><p class="label">Contact</p>
+                <hr>
+                <section>
+                    Name:<br>
+                    <input class="lineCor" type="text" name="name" value="John Smith" size="125">
+                    <br><br>
+                    Email:<br>
+                    <input class="lineCor" type="text" name="email" value="example@gmail.com" size="125">
+                    <br><br>
+                    Message:<br>
+                    <textarea name="message" cols="126" rows="10"></textarea>
+                    <br>
+                    <input id="submit-con" type="submit" value="Submit">
+                </section>
             </section>
         </section>
-        </section>
-        <!-- <div id="bottomSpacer"></div> -->
-        <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
-        <!-- <div id="bottomSpacer"></div> -->
+        <footer id="footer">Copyright &#169 Ron Johnson</footer>
     </body>
 </html>
