--- a/portfolio.html
+++ b/portfolio.html
@@ -6,57 +6,61 @@
 	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+        <!-- put asides in first so header and content will fit between -->
         <aside id="sidebarA">
             <section id="upperA"></section>
         </aside>
         <aside id="sidebarB">
             <section id="upperB"></section>
         </aside>
-        <header><p id="leftPara">Ron Johnson</p>
+        <header>
+            <p id="leftPara">Ron Johnson</p>
             <nav>
                 <a href="index.html">About Me | </a>
                 <a href="#">Portfolio | </a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
+        <!-- set spacer specific for page -->
         <div id="spacerP"></div>
+        <!-- main content  -->
         <section class="main left">
-        <section><p class="label">Portfolio</p>
-            <hr>
-            <section>
-                <div class="row">
-                    <div class="column">
-                      <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:125%">
-                      <div id="overlay1">Ajax Live Search</div>
-                    </div>
-                    <div class="column-smsp">
-                    </div>
-                    <div class="column">
-                      <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:125%">
-                      <div id="overlay2">jQuery Animation</div>
-                    </div>
-                </div>
-                <div class="row">
+            <section><p class="label">Portfolio</p>
+                <hr>
+                <section>
+                    <div class="row">
                         <div class="column">
-                          <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:125%">
-                          <div id="overlay3">Numerical Integrations</div>
+                          <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:125%">
+                          <div class="overlay overlay1">Ajax Live Search</div>
                         </div>
                         <div class="column-smsp">
                         </div>
                         <div class="column">
-                          <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:125%">
-                          <div id="overlay4">Hiding Objects</div>
+                          <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:125%">
+                          <div class="overlay overlay2">jQuery Animation</div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column">
-                          <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:125%">
-                          <div id="overlay5">Node.js JSON Server</div>
+                            <div class="column">
+                              <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:125%">
+                              <div class="overlay overlay3">Numerical Integrations</div>
+                            </div>
+                            <div class="column-smsp">
+                            </div>
+                            <div class="column">
+                              <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:125%">
+                              <div class="overlay overlay4">Hiding Objects</div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="row">
+                            <div class="column">
+                              <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:125%">
+                              <div class="overlay overlay5">Node.js JSON Server</div>
+                            </div>
+                        </div>
+                </section>
             </section>
         </section>
-    </section>
-        <div><footer id="footer">Copyright &#169 Ron Johnson</footer></div>
+        <footer id="footer">Copyright &#169 Ron Johnson</footer>
     </body>
 </html>
