documentation finished, html and css validated, stick footer added

--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,57 @@
 ﻿<!DOCTYPE html>
 
 <html lang='en-us'>
-    <head>
-        <title>HomeworkOne Contact</title>
-	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <!-- put asides in first so header and content will fit between -->
-        <aside id="sidebarA">
-            <section id="upperA"></section>
-        </aside>
-        <aside id="sidebarB">
-            <section id="upperB"></section>
-        </aside>
-        <header>
-            <p id="leftPara">Ron Johnson</p>
-            <nav>
-                <a href="index.html">About Me | </a>
-                <a href="portfolio.html">Portfolio | </a>
-                <a href="#">Contact</a>
-            </nav>
-        </header>
-        <!-- set spacer specific for page -->
-        <div id="spacerC"></div>
-        <!-- main content  -->
-        <section class="main left">
-            <section><p class="label">Contact</p>
-                <hr>
-                <section>
-                    Name:<br>
-                    <input class="lineCor" type="text" name="name" value="John Smith" size="125">
-                    <br><br>
-                    Email:<br>
-                    <input class="lineCor" type="text" name="email" value="example@gmail.com" size="125">
-                    <br><br>
-                    Message:<br>
-                    <textarea name="message" cols="126" rows="10"></textarea>
-                    <br>
-                    <input id="submit-con" type="submit" value="Submit">
-                </section>
-            </section>
-        </section>
-        <footer id="footer">Copyright &#169 Ron Johnson</footer>
-    </body>
+
+<head>
+    <title>HomeworkOne Contact</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <!-- put asides in first so header and content will fit between -->
+    <aside id="sidebarA">
+        <header id="upperA"></header>
+    </aside>
+    <aside id="sidebarB">
+        <header id="upperB"></header>
+    </aside>
+
+    <header>
+        <p id="leftPara">Ron Johnson</p>
+        <nav>
+            <a href="index.html">About Me | </a>
+            <a href="portfolio.html">Portfolio | </a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+
+    <!-- set spacer specific for page -->
+    <div id="spacerC"></div>
+
+    <!-- main content  -->
+    <main class="main left">
+        <p class="label">Contact</p>
+        <hr>
+        Name:<br>
+        <input class="lineCor" type="text" name="name" value="John Smith" size="125">
+        <br><br>
+        Email:<br>
+        <input class="lineCor" type="text" name="email" value="example@gmail.com" size="125">
+        <br><br>
+        Message:<br>
+        <textarea name="message" cols="126" rows="10"></textarea>
+        <br>
+        <input id="submit-con" type="submit" value="Submit">
+    </main>
+        <p id="low-right">
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
+    <footer id="footer">Copyright &#169; Ron Johnson</footer>
+
+</body>
+
 </html>
