--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 ﻿<!DOCTYPE html>
 
 <html lang='en-us'>
-    <head>
-        <title>HomeworkOne About Me</title>
-        <meta charset="utf-8">
-	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <!-- put asides in first so header and content will fit between -->
-        <aside id="sidebarA">
-            <section id="upperA"></section>
-        </aside>
-        <aside id="sidebarB">
-            <section id="upperB"></section>
-        </aside>
-        <header>
-            <p id="leftPara">Ron Johnson</p>
-            <nav>
-                <a href="#">About Me |  </a>
-                <a href="portfolio.html">Portfolio  |  </a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </header>
-        <!-- set spacer specific for page -->
-        <div id="spacerA"></div>
-        <!-- main content  -->
-        <section class="main left">
-            <section><p class="label">About Me</p>
-                <hr>
-                <section>
-                    <img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson" width="25%">
-                    <p class="lineCor">Currently enrolled in Full Stack Web Development Boot Camp with intent to move into this field. Programming skills using HTML, CSS, BootStrap, JavaScript, Java, Python, React.js, Node.js, MySQL, and Angular. Performed over 200 commits to Github. My most recent projects can be be found on my website www.mooseplayground.com.</p>
-                    <p class="lineCor">Extensive experience in electronics industry as QC specialist and troubleshooter for circuit boards and software for industrial applications. Broad experience in medical laboratory testing using automated and manual methods including programming test equipment, and bioinformatics data transfer. Wide math/science tutoring experience working with high school and college students to ensure student success.</p>
-                </section>
-            </section>
-        </section>
-        <footer id="footer">Copyright &#169 Ron Johnson</footer>
-    </body>
+
+<head>
+    <title>HomeworkOne About Me</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+    <!-- put asides in first so header and content will fit between -->
+    <aside id="sidebarA">
+        <header id="upperA"></header>
+    </aside>
+    <aside id="sidebarB">
+        <header id="upperB"></header>
+    </aside>
+
+    <header id="header-width">
+        <p id="leftPara">Ron Johnson</p>
+        <nav>
+            <a href="#">About Me | </a>
+            <a href="portfolio.html">Portfolio | </a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <!-- set spacer specific for page -->
+    <div id="spacerA"></div>
+
+    <!-- main content  -->
+    <main class="main left">
+    <p class="label">About Me</p>
+    <hr>
+    <img id="bio-image" src="assets/images/RonJohnson.jpg" alt="Ron Johnson">
+    <p class="lineCor">Currently enrolled in Full Stack Web Development Boot Camp with intent to move into this field.
+        Programming skills using HTML, CSS, BootStrap, JavaScript, Java, Python, React.js, Node.js, MySQL, and Angular.
+        Performed over 200 commits to Github. My most recent projects can be be found on my website
+        www.mooseplayground.com.</p>
+    <p class="lineCor">Extensive experience in electronics industry as QC specialist and troubleshooter for circuit
+        boards and software for industrial applications. Broad experience in medical laboratory testing using automated
+        and manual methods including programming test equipment, and bioinformatics data transfer. Wide math/science
+        tutoring experience working with high school and college students to ensure student success.</p>
+    </main>
+
+    <footer id="footer">Copyright &#169; Ron Johnson</footer>
+
+</body>
+
 </html>
