--- a/portfolio.html
+++ b/portfolio.html
@@ -1,66 +1,73 @@
 ﻿<!DOCTYPE html>
 
 <html lang='en-us'>
-    <head>
-        <title>HomeworkOne Portfolio</title>
-	    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <!-- put asides in first so header and content will fit between -->
-        <aside id="sidebarA">
-            <section id="upperA"></section>
-        </aside>
-        <aside id="sidebarB">
-            <section id="upperB"></section>
-        </aside>
-        <header>
-            <p id="leftPara">Ron Johnson</p>
-            <nav>
-                <a href="index.html">About Me | </a>
-                <a href="#">Portfolio | </a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </header>
-        <!-- set spacer specific for page -->
-        <div id="spacerP"></div>
-        <!-- main content  -->
-        <section class="main left">
-            <section><p class="label">Portfolio</p>
-                <hr>
-                <section>
-                    <div class="row">
-                        <div class="column">
-                          <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:125%">
-                          <div class="overlay overlay1">Ajax Live Search</div>
-                        </div>
-                        <div class="column-smsp">
-                        </div>
-                        <div class="column">
-                          <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:125%">
-                          <div class="overlay overlay2">jQuery Animation</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                            <div class="column">
-                              <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:125%">
-                              <div class="overlay overlay3">Numerical Integrations</div>
-                            </div>
-                            <div class="column-smsp">
-                            </div>
-                            <div class="column">
-                              <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:125%">
-                              <div class="overlay overlay4">Hiding Objects</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="column">
-                              <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:125%">
-                              <div class="overlay overlay5">Node.js JSON Server</div>
-                            </div>
-                        </div>
-                </section>
-            </section>
-        </section>
-        <footer id="footer">Copyright &#169 Ron Johnson</footer>
-    </body>
+
+<head>
+    <title>HomeworkOne Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <!-- put asides in first so header and content will fit between -->
+    <aside id="sidebarA">
+        <header id="upperA"></header>
+    </aside>
+    <aside id="sidebarB">
+        <header id="upperB"></header>
+    </aside>
+
+    <header>
+        <p id="leftPara">Ron Johnson</p>
+        <nav>
+            <a href="index.html">About Me | </a>
+            <a href="#">Portfolio | </a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <!-- set spacer specific for page -->
+    <div id="spacerP"></div>
+
+    <!-- main content  -->
+    <main class="main left">
+        <p class="label">Portfolio</p>
+        <hr>
+        
+        <!-- picture content in rows and columns -->
+        <div class="row">
+            <div class="column">
+                <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:135%">
+                <div class="overlay overlay1">Ajax Live Search</div>
+            </div>
+            <div class="column-smsp">
+            </div>
+            <div class="column">
+                <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:135%">
+                <div class="overlay overlay2">jQuery Animation</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:135%">
+                <div class="overlay overlay3">Numerical Integrations</div>
+            </div>
+            <div class="column-smsp">
+            </div>
+            <div class="column">
+                <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:135%">
+                <div class="overlay overlay4">Hiding Objects</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:135%">
+                <div class="overlay overlay5">Node.js JSON Server</div>
+            </div>
+        </div>
+    </main>
+
+    <footer id="footer">Copyright &#169; Ron Johnson</footer>
+
+</body>
+
 </html>
