porfolio html and css change to keep labels on images

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,38 +29,38 @@
     <div id="spacerP"></div>
 
     <!-- main content  -->
-    <main class="main left">
+    <main class="main1 left">
         <p class="label">Portfolio</p>
         <hr>
         
         <!-- picture content in rows and columns -->
         <div class="row">
             <div class="column">
-                <img class="port-image" src="assets/images/norway_1.png" alt="Snow" style="width:135%">
+                <img class="port-image port-image1" src="assets/images/norway_1.png" alt="Snow" style="width:135%">
                 <div class="overlay overlay1">Ajax Live Search</div>
             </div>
             <div class="column-smsp">
             </div>
             <div class="column">
-                <img class="port-image" src="assets/images/norway_2.png" alt="Forest" style="width:135%">
+                <img class="port-image port-image2" src="assets/images/norway_2.png" alt="Forest" style="width:135%">
                 <div class="overlay overlay2">jQuery Animation</div>
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img class="port-image" src="assets/images/norway_3.png" alt="Rain" style="width:135%">
+                <img class="port-image port-image3" src="assets/images/norway_3.png" alt="Rain" style="width:135%">
                 <div class="overlay overlay3">Numerical Integrations</div>
             </div>
             <div class="column-smsp">
             </div>
             <div class="column">
-                <img class="port-image" src="assets/images/norway_4.png" alt="Sleet" style="width:135%">
+                <img class="port-image port-image4" src="assets/images/norway_4.png" alt="Sleet" style="width:135%">
                 <div class="overlay overlay4">Hiding Objects</div>
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img class="port-image" src="assets/images/norway_5.png" alt="Tornado" style="width:135%">
+                <img class="port-image port-image5" src="assets/images/norway_5.png" alt="Tornado" style="width:135%">
                 <div class="overlay overlay5">Node.js JSON Server</div>
             </div>
         </div>
