--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>HomeworkOne About Me</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
