--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>HomeworkOne Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
